# thepit-v2

./: .gitignore  AGENTS.md  EVAL.md  Makefile  PLAN.md  README.md  SPEC.md  eslint.config.mjs  middleware.ts  package.json  pnpm-lock.yaml  slopodar-v2.yaml  tasks.yaml  tsconfig.json  vitest.config.ts  weaver-code-review-gemini31.md
.claude/agents/: analyst.md  anotherpair.md  architect.md  janitor.md  keel.md  maturin.md  operatorslog.md  watchdog.md  weave-quick-ref.md  weaver.md
.opencode/agents/: analyst.md  anotherpair.md  architect.md  captainslog.md  janitor.md  keel.md  maturin.md  scribe.md  sentinel.md  watchdog.md  weave-quick-ref.md  weaver.md
app/: layout.tsx  page.tsx
app/agents/: page.tsx
app/arena/: actions.ts  page.tsx
app/leaderboard/: page.tsx
components/agents/: agent-builder.tsx  agent-details.tsx  agents-catalog.tsx
components/arena/: arena.tsx  message-card.tsx  preset-card.tsx
components/engagement/: share-panel.tsx
components/leaderboard/: leaderboard-table.tsx
data/signal-test/: codex-format-A-signal-20260310-093627.md  gemini-format-C-prose-20260310-093627.md  (+2 more)
db/: index.ts  schema.test.ts  schema.ts
mk/: darkcat.mk
pitheat/: Cargo.toml  README.md
pitkeel/: analysis.py  daemon.py  git_io.py  pitkeel.py  pyproject.toml  test_analysis.py
plans/: REVIEW-CHECKLIST.md
presets/: darwin-special.json  history-debate.json  philosophers-club.json  startup-pitch.json
scripts/: backlog.py  darkcat-synth.md  darkcat.md  pitcommit.py  prepare-commit-msg  slopticopter.py  voice-log.py
tests/: setup-env.ts
(+680 files in other folders)
